fix: update muted color in globals.css for better contrast

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -58,7 +58,7 @@
   --foreground: #ffffff;
   --primary: #6b1a0b;
   --secondary:#393837; 
-  --muted:#3f3535;
+  --muted:#969393;
   --border: #949191;
 }
 
